labs/16-networkpolicy/03-allow-backend-to-db.yaml
# db Pod'una sadece tier=backend etiketli Pod'lardan erişime izin verir.

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backend-to-db
spec:
  podSelector:
    matchLabels:
      tier: db
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          tier: backend
    ports:
    - protocol: TCP
      port: 5678
